--- a/Source/P5/Projects/Main/GameClasses/Lib_GameClassesObjChar.vcxproj
+++ b/Source/P5/Projects/Main/GameClasses/Lib_GameClassesObjChar.vcxproj
@@ -336,7 +336,7 @@
       <PrecompiledHeaderFile>PCH.h</PrecompiledHeaderFile>
       <PrecompiledHeaderOutputFile>$(IntDir)$(ProjectName).pch</PrecompiledHeaderOutputFile>
       <WarningLevel>Level3</WarningLevel>
-      <TreatWarningAsError>true</TreatWarningAsError>
+      <TreatWarningAsError>false</TreatWarningAsError>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <CompileAs>Default</CompileAs>
