Add some kind of OpenGL renderer

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@
 /Source/P5/Shared/MOS/XR/Output
 /Source/P5/Shared/MOS/MSystem/Intermediate
 /Source/P5/Shared/MOS/MSystem/Output
+/Source/P5/Shared/MOS/rndrgl/Intermediate
+/Source/P5/Shared/MOS/rndrgl/Output
