--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 /Source/P5/Shared/MOS/MSystem/Output
 /Source/P5/Shared/MOS/rndrgl/Intermediate
 /Source/P5/Shared/MOS/rndrgl/Output
+Source/P5/Projects/Main/Exe_Win32/Exe_Win32.vcxproj.user
