--- a/Source/P5/Shared/MOS/rndrsokol/Lib_Sokol.vcxproj
+++ b/Source/P5/Shared/MOS/rndrsokol/Lib_Sokol.vcxproj
@@ -36,6 +36,7 @@
     <ClCompile Include="..\..\MCC\Mrtc.cpp" />
     <ClCompile Include="MDisplaySokol.cpp" />
     <ClCompile Include="MRenderSokol.cpp" />
+    <ClCompile Include="MTextureSokol.cpp" />
     <ClCompile Include="PCH\Pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
     </ClCompile>
